--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "encoding": "^0.1.13",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "graphql": "^16.6.0",
