--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "graphql": "^16.6.0",
     "graphql-request": "^6.0.0",
     "next": "13.3.1",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
