--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "18.15.13",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
+    "@types/react-timeago": "^4.1.3",
     "autoprefixer": "10.4.14",
     "encoding": "^0.1.13",
     "eslint": "8.39.0",
@@ -25,6 +26,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-timeago": "^7.1.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   }
