--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
     "@types/react-timeago": "^4.1.3",
+    "@vercel/analytics": "^1.0.0",
     "autoprefixer": "10.4.14",
     "encoding": "^0.1.13",
     "eslint": "8.39.0",
